# pipe-failure-detection

./: .copier-answers.yml  .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ansible-lint.yml  codeql.yml  cronjobs.yml  dependency-review.yml  images.yml  mega-linter.yml  pull-requests-and-pushes.yml  stale.yml
data/raw/: target_train.csv
docs/: DEVELOPER_GUIDE.md  README.md  STYLE_GUIDE.md
src/: __init__.py  params.yaml  settings.py
src/common/: config.py  constants.py  enums.py  exceptions.py  features.py  pipeline_steps.py
src/core/: __init__.py  loader.py  metrics.py  pipeline_step.py  transformer.py
src/features/: __init__.py  feature_engineer.py  feature_engineer_pipeline_step.py  rolling_fe_config.py  split_dataset_pipeline_step.py
src/pipelines/: feature_engineer_task.py  pipeline.py  pipeline_from_funcs.py  preprocessor_task.py  split_dataset_task.py  train_task.py
src/preprocess/: __init__.py  loaders.py  preprocess_pipeline_step.py  preprocessor.py
src/scripts/: clearml_dataset.py
src/train/: __init__.py  train_pipeline_step.py
src/utilities/: loaders.py  logging.py  path_utils.py  transformers.py  utils.py
src/visualization/: plotting_pipeline_step.py
tests/: __init__.py  test_zz_pipe_failure_detection.py
